# sqlalchemy-bind-manager

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  tox.ini  versions.json
.github/workflows/: github-pages-dev.yml  github-pages.yml  python-3.10.yml  python-3.11.yml  python-3.12.yml  python-3.8.yml  python-3.9.yml  python-bandit.yml  python-code-style.yml  python-lint.yml  python-publish.yml  python-quality.yml  python-test-pull-request.yml  python-test.yml  python-tests.yml  python-typing.yml  release.yml  reusable-github-pages.yml
0.10/api_reference/repository/: index.html
0.10/lifecycle/: index.html
0.10/manager/alembic/: index.html
0.10/manager/config/: index.html
0.10/manager/models/: index.html
0.11/: 404.html  index.html
0.11/api_reference/bind_manager/: index.html
0.11/api_reference/exceptions/: index.html
0.11/api_reference/repository/: index.html
0.11/manager/config/: index.html
0.11/manager/models/: index.html
0.11/manager/session/: index.html
0.11/repository/usage/: index.html
0.12/: index.html  objects.inv
0.12/api_reference/exceptions/: index.html
0.12/manager/alembic/: index.html
0.12/manager/config/: index.html
0.12/manager/session/: index.html
0.12/search/: search_index.json
0.13/: 404.html
0.13/api_reference/bind_manager/: index.html
0.13/api_reference/exceptions/: index.html
0.13/api_reference/repository/: index.html
0.13/lifecycle/: index.html
0.13/manager/alembic/: index.html
0.13/manager/config/: index.html
0.13/manager/models/: index.html
0.13/manager/session/: index.html
0.13/repository/uow/: index.html
0.13/repository/usage/: index.html
0.14/: 404.html  objects.inv
0.14/api_reference/bind_manager/: index.html
0.14/api_reference/exceptions/: index.html
0.14/api_reference/repository/: index.html
0.14/manager/alembic/: index.html
0.14/manager/config/: index.html
0.14/manager/models/: index.html
0.14/manager/session/: index.html
0.14/search/: search_index.json
0.9/API-Reference/: index.html
0.9/API-Reference/_bind_manager/: index.html
0.9/API-Reference/_repository/: index.html
0.9/API-Reference/_repository/async_/: index.html
0.9/API-Reference/_repository/result_presenters/: index.html
0.9/API-Reference/_repository/sync/: index.html
0.9/API-Reference/_session_handler/: index.html
0.9/API-Reference/_unit_of_work/: index.html
0.9/API-Reference/repository/: index.html
0.9/lifecycle/: index.html
0.9/manager/alembic/: env.py
0.9/manager/config/: index.html
0.9/manager/models/: index.html
0.9/manager/session/: index.html
0.9/repository/uow/: index.html
0.9/search/: search_index.json
dev/: 404.html  index.html  objects.inv
dev/API-Reference/: index.html
dev/API-Reference/_bind_manager/: index.html
dev/API-Reference/_repository/: index.html
dev/API-Reference/_repository/async_/: index.html
dev/API-Reference/_repository/base_repository/: index.html
dev/API-Reference/_repository/common/: index.html
dev/API-Reference/_repository/result_presenters/: index.html
dev/API-Reference/_session_handler/: index.html
dev/API-Reference/_unit_of_work/: index.html
dev/API-Reference/exceptions/: index.html
dev/API-Reference/protocols/: index.html
dev/API-Reference/repository/: index.html
dev/api_reference/bind_manager/: index.html
dev/api_reference/exceptions/: index.html
dev/api_reference/repository/: index.html
dev/lifecycle/: index.html
dev/manager/alembic/: env.py  index.html
dev/manager/config/: index.html
dev/manager/models/: index.html
dev/manager/session/: index.html
dev/repository/uow/: index.html
dev/repository/usage/: index.html
dev/search/: search_index.json
docs/: .pages  index.md  lifecycle.md
docs/api_reference/: .pages  bind_manager.md  exceptions.md  repository.md
docs/manager/: .pages  alembic.md  config.md  models.md  session.md
docs/manager/alembic/: env.py
docs/repository/: .pages  repository.md  uow.md  usage.md
scripts/: docs-version.sh  gen_pages.py  version_from_git.py
sqlalchemy_bind_manager/: __init__.py  _async_helpers.py  _bind_manager.py  _repository.py  _session_handler.py  _transaction_handler.py  _unit_of_work.py  exceptions.py  mypy.ini  protocols.py  repository.py
sqlalchemy_bind_manager/_repository/: __init__.py  abstract.py  async_.py  base_repository.py  common.py  result_presenters.py  sync.py
sqlalchemy_bind_manager/_unit_of_work/: __init__.py
tests/: conftest.py  test_interfaces.py  test_protocols.py  test_sqlalchemy_bind_manager.py
tests/repository/: conftest.py  test_common.py  test_composite_pk.py  test_cursor_paginated_find.py  test_delete.py  test_delete_many.py  test_find.py  test_get.py  test_model_class_checks.py  test_operation_isolation.py  test_paginated_find.py  test_repository_lifecycle.py  test_save.py
tests/repository/async_/: conftest.py  test_cursor_pagination.py  test_delete.py  test_delete_many.py  test_find.py  test_get.py  test_lifecycle.py  test_operation_isolation.py  test_pagination.py  test_save.py  test_session_lifecycle.py
tests/repository/result_presenters/: test_composite_pk.py  test_cursor_paginated_result_presenter.py
tests/repository/sync/: conftest.py  test_cursor_pagination.py  test_delete.py  test_delete_many.py  test_find.py  test_get.py  test_lifecycle.py  test_operation_isolation.py  test_pagination.py  test_save.py  test_session_lifecycle.py
tests/repository/sync_repository/: test_save.py
tests/session_handler/: conftest.py  test_session_lifecycle.py
tests/transaction_handler/async_/: conftest.py  test_session_lifecycle.py
tests/transaction_handler/sync/: conftest.py  test_session_lifecycle.py
tests/unit_of_work/: conftest.py  test_lifecycle.py  test_session_behaviour.py
tests/unit_of_work/async_/: conftest.py  test_lifecycle.py  test_session_behaviour.py  test_session_lifecycle.py
tests/unit_of_work/sync/: conftest.py  test_lifecycle.py  test_session_behaviour.py  test_session_lifecycle.py
(+1 files in other folders)
