[project]
name = "sqlalchemy-bind-manager"
dynamic = ["version"]
description = "A manager to easily handle multiple SQLAlchemy configurations"
authors = [{ name = "Federico Busetti", email = "729029+febus982@users.noreply.github.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "sqlalchemy",
    "config",
    "manager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.1.1,<3",
    "SQLAlchemy[asyncio, mypy]~=2.0.0",
]

[project.urls]
Homepage = "https://febus982.github.io/sqlalchemy-bind-manager"
Repository = "https://github.com/febus982/sqlalchemy-bind-manager"

[dependency-groups]
dev = [
    "aiosqlite>=0.18.0",
    "coverage>=6.5.0",
    "mike>=2.0.0",
    "mkdocs>=1.4.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-awesome-pages-plugin>=2.9.2,<3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.1.16",
    "mypy>=0.990",
    "poetry-plugin-export",
    "pymdown-extensions>=10.0.1",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=4.0.0",
    "pytest-factoryboy>=2.5.0",
    "pytest-xdist>=3.0.2",
    "ruff>=0.0.263",
    "tox>=4.14.1,<5",
    "tox-uv>=1.26.0",
    "uv-dynamic-versioning>=0.8.2",
]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["sqlalchemy_bind_manager"]

[tool.hatch.build.targets.wheel]
include = ["sqlalchemy_bind_manager"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "sqlalchemy_bind_manager/version.py"

[tool.coverage.run]
branch = true
source = ["sqlalchemy_bind_manager"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "pragma: no cover",
    "pass",
    "\\.\\.\\.",
    ]
omit = [
    "sqlalchemy_bind_manager/version.py",
]

[tool.mypy]
files = "sqlalchemy_bind_manager"
python_version = "3.9"
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
addopts = "-n auto --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
extend-exclude = ["docs", ".tox"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "RUF",  # ruff-specific-rules
]
# Ignoring rules problematic with formatter
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"repository.py" = ["F401"]
"tests/**/*.py" = ["S101"]  # Allow assert usage on tests
